Added sound effects when lazer is fired

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<html>
 <head>
   <style>
         body {
@@ -8,13 +9,27 @@
 	    color: white;
         }
     </style>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-36849838-3', 'thejwal.com');
+  ga('send', 'pageview');
+
+</script>
 <script src="pixi.js"></script>
+<script src="sound.js"></script>
 </head>
 <body>
 <div style="padding:1em">
 <h1>Lazer Bunny</h1>
 </div>
     <script>
+    createjs.Sound.alternateExtensions = ["mp3"];
+    createjs.Sound.addEventListener("fileload", createjs.proxy(this.loadHandler, this));
+    createjs.Sound.registerSound("PewPew.mp3", "sound");
  
     // create an new instance of a pixi stage
     var interactive = true;
@@ -74,6 +89,7 @@
             lazers.push(lazer);
             stage.addChild(lazer);
             isFiring = false;
+            createjs.Sound.play("sound"); 
         }
         for (var i = 0; i < lazers.length; i++){
             var lazer= lazers[i];
@@ -86,3 +102,4 @@
     }
 </script>
 </body>
+</html>
